# agenteval

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adapters.md  assertions.md  cli.md  quickstart.md  tracer.md
examples/: README.md  test_demo_agent.py  test_realistic_agents.py
examples/live_llm/: README.md  eval_anthropic_support_agent.py  eval_openai_support_agent.py
src/agenteval/: __init__.py  assertions.py  cli.py  exceptions.py  models.py  registry.py  reporter.py  runner.py  suite.py  tracer.py
src/agenteval/adapters/: __init__.py  anthropic_adapter.py  langchain_adapter.py  openai_adapter.py
tests/: conftest.py  test_assertions.py  test_models.py  test_registry.py  test_reporter.py  test_runner.py  test_suite.py  test_tracer.py
tests/adapters/: test_anthropic_adapter.py  test_openai_adapter.py
