[project]
name = "agenteval"
version = "0.1.0"
description = "Lightweight evaluation and observability toolkit for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "agents", "evaluation", "testing", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.4.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
openai    = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.28.0"]
langchain = ["langchain-core>=0.2.0"]
all       = ["agenteval[openai,anthropic,langchain]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "anyio[trio]>=4.4.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "pre-commit>=3.7.0",
]

[project.scripts]
agenteval = "agenteval.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/agenteval"
Repository = "https://github.com/your-org/agenteval"
Issues = "https://github.com/your-org/agenteval/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenteval"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestReturnNotNoneWarning",
]
